--- a/npcs/rainbow.yaml
+++ b/npcs/rainbow.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -328,6 +328,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: subscribes_to_bowls_and_pens_a_wood_stock_of_the_month_club_for_turners_
       name: Subscribes to Bowls and Pens, a wood stock-of-the-month club for turners.
 
@@ -463,30 +464,50 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills:       
-    - Rock Gnome Abilities:
-      - Gnome Cunning: Advantage on all Intelligence, Wisdom and Charisma saving throws againts magic
-        Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
-        Artificers Lore: Whenever you make an Intelligence (History) check related to magical, alchemical, or technological items, you can add twice your proficiency bonus instead of any other proficiency bonus that may apply
-        Tinker:
-        - Description: You have proficiency with artisan tools (tinker's tools). Using those tools, you can spend 1 hour and 10 gp worth of materials to construct a Tiny clockwork device (AC 5, 1 hp). The device ceases to function
-                       after 24 hours (unless you spend 1 hour repairing it to keep the device functioning), or when you use your action to dismantle it; at that time, you can reclaim the materials used to create it. You can have up
-                       to three such devices active at a time. When you create a device, choose one of the following options - 
-          Clockwork Toy: This toy is a clockwork animal, monster, or person, such as a frog, mouse, bird, dragon, or soldier. When placed on the ground, the toy moves 5 feet across the ground on each of your turns in
-                         a random direction. It makes noises as appropriate to the creature it represents.
-          Fire Starter: The device produces a miniature flame, which you can use to light a candle, torch, or campfire. Using the device requires your action.
-          Music Box: When opened, this music box plays a single song at a moderate volume. The box stops playing when it reaches the song's end or when it is closed.
+    saving-throws:
+    - Constitution
+    - Strength
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Magic
+    skills:
+    - Wood Smithing
+    proficiencies:
+    - Athletics
+    - Survival
+    - History
+    - Smith's Tools
+    - Woodcarver's Tools
+  special-abilities:       
+  - title: Rock Gnome Abilities
+  - abilities: 
+    - title: Gnome Cunning
+    - content: Advantage on all Intelligence, Wisdom and Charisma saving throws againts magic
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
+    - title: Artificers Lore
+    - content: Whenever you make an Intelligence (History) check related to magical, alchemical, or technological items, you can add twice your proficiency bonus instead of any other proficiency bonus that may apply
+    - title: Tinker
+    - content: You have proficiency with artisan tools (tinker's tools). Using those tools, you can spend 1 hour and 10 gp worth of materials to construct a Tiny clockwork device (AC 5, 1 hp). The device ceases to function
+               after 24 hours (unless you spend 1 hour repairing it to keep the device functioning), or when you use your action to dismantle it; at that time, you can reclaim the materials used to create it. You can have up
+               to three such devices active at a time. When you create a device, choose one of the following options - 
+               Clockwork Toy - This toy is a clockwork animal, monster, or person, such as a frog, mouse, bird, dragon, or soldier. When placed on the ground, the toy moves 5 feet across the ground on each of your turns in
+                               a random direction. It makes noises as appropriate to the creature it represents.
+               Fire Starter - The device produces a miniature flame, which you can use to light a candle, torch, or campfire. Using the device requires your action.
+               Music Box - When opened, this music box plays a single song at a moderate volume. The box stops playing when it reaches the song's end or when it is closed.
 
-    special-abilities:
-       - Proficiencies: Athletics, Survival, History, Smith's Tools
-         Feats: N/A
+  - title: Attacks
+  - content: 1 attack with club
+  - title: Combat Tactics
+  - content: Rainbow tries to avoid or escape combat as much as possible, aware of her lack of training.
 
-    attacks: |
-      1 attack with club
-    combat-tactics: |
-      Rainbow tries to avoid or escape combat as much as possible, aware of her lack of training.
-    special-equipment:
-    - Many exotic woods; doesn't know that their forge is actually the Sampo built by Ilmarinen the Everlasting Craftsman.
+  - title: Special Equipment
+  - abilities:
+    - title: Magic Forge
+    - content: Rainbow doesn't know that their forge is actually the Sampo built by Ilmarinen the Everlasting Craftsman.
       
   profile:
 
