--- a/npcs/rivan_the_hag_hunter.yaml
+++ b/npcs/rivan_the_hag_hunter.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: older adult
+    age: Older Adult
 
     #
     # Races (case insensitive):
@@ -331,6 +331,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: cult_of_blood_hunters
       name: Cult of Blood Hunters
 
@@ -461,67 +462,110 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Constitution
+    - Strength
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Charmed
     skills:
-    - Hexblood Abilities:
-      - Darkvision: You can see in dim light within 60 feet of you as if it were bright light and in darkness as if it were dim light.
-        Fey Resilience: You have advantage on saving throws you make to avoid or end the charmed condition on yourself.
-        Hex Magic: You can cast the Disguise Self and Hex spells with this trait. Intelligence, Wisdom, or Charisma is your spellcasting ability for these spells (choose when you gain this lineage). Once you cast either of these
-                   spells with this trait, you can’t cast that spell with it again until you finish a long rest. You can also cast these spells using any spells slots you have.
-        Magic Token: As an action, you can harmlessly pull out one of your nails, a tooth, or a lock of hair. This token is imbued with magic until you finish a long rest. While the token is imbued in this way, you can use an
-                     action to send a telepathic message to the creature holding or carrying the token, as long as you are on the same plane of existence and are within 10 miles of it. The message can contain up to twenty-five
-                     words. In addition, while you are within 10 miles of the token, you can use an action to enter a trance for 1 minute, during which you can see and hear from the token as if you were located where it is.
-                     While you are using your senses at the token’s location, you are blinded and deafened in regard to your own surroundings. Afterward, the token is harmlessly destroyed. Once you create a token using this
-                     feature, you can’t do so again until you finish a long rest, at which point your missing part regrows 
-      Blood Hunter Abilities:
-      - Hunters Bane: 
-        - Description: You have advantage on Wisdom (Survival) checks to track fey, fiends, or undead, as well as on Intelligence ability checks to recall information about them. The Hunter’s Bane also empowers your body to 
-                       control and shape hemocraft magic, using your own blood and life essence to fuel your abilities. Some of your features require your target to make a saving throw to resist the feature’s effects. 
-          Hemocraft Save: DC 14
-        Blood Maledict: 
-        - Description: you gain the ability to channel, and sometimes sacrifice, a part of your vital essence to curse and manipulate creatures through hemocraft magic. You gain one Blood Curse of your choice. You learn one 
-                       additional blood curse of your choice, and you can choose one of the blood curses you know and replace it with another blood curse, at 6th, 10th, 14th, and 18th level. When you use your Blood Maledict, 
-                       you choose which curse to invoke. While invoking a blood curse, but before it affects the target, you can choose to amplify the curse by losing a number of hit points equal to one roll of your hemocraft 
-                       die, as shown in the Hemocraft Die column of the Blood Hunter table. An amplified curse gains an additional effect, noted in the curse’s description. Creatures that do not have blood in their bodies are 
-                       immune to blood curses, unless you have amplified the curse. You can use this feature once. Beginning at 6th level, you can use your Blood Maledict feature twice, at 13th level you can use it three times 
-                       between rests, and at 17th level, you can use it four times between rests. You regain all expended uses when you finish a short or long rest.
-          Hemocraft Die: 1d6
-          Blood Curses Known: 2
-          Blood Curses: Blood Curse of the Eyeless, Blood Curse of The Fallen Puppet
-        Figthing Style: Two Weapon Fighting
-        Crimson Rite: 
-        - Description: you learn to invoke a rite of hemocraft within your weapon at the cost of your own vitality. Choose one rite from the Primal Rites list to learn. As a bonus action, you activate a crimson rite on a 
-                       single weapon with the elemental energy of a known rite of your choice that lasts until you finish a short or long rest, or if you aren’t holding the weapon at the end of your turn. When you activate a rite,
-                       you lose a number of hit points equal to one roll of your hemocraft die, as shown in the Hemocraft Die column of the Blood Hunter table. While active, attacks from this weapon deal an additional 1d4 damage 
-                       of the chosen rite’s type. This damage is magical, and increases as you gain levels as a blood hunter, as shown in the Hemocraft Die column of the Blood Hunter table. A weapon can only hold a single active 
-                       rite at a time. You learn an additional Primal Rite of your choice at 7th level, and choose an Esoteric Rite to learn at 14th level.
-          Primal Rites Known: Rite of the Storm, Rite of the Flame
-        Extra Attack: you can attack twice, instead of once, whenever you take the Attack action
-        Brand of Castigation: whenever you damage a creature with your Crimson Rite feature, you can choose to sear an arcane brand of hemocraft magic into it (requires no action). You always know the direction to the branded 
-                              creature, and each time the branded creature deals damage to you or a creature you can see within 5 feet of you, the branded creature suffers psychic damage equal to your Intelligence modifier 
-                              (minimum of 1 damage). Your brand lasts until you dismiss it, or you apply a brand to another creature. Your brand counts as a spell for the purposes of dispel magic, and the spell level is equal to 
-                              half of your blood hunter level (maximum of 9th level spell). Once you use this feature, you can’t use it again until you finish a short or long rest.
-      Order of the Profane Soul Abilities:
-      - Otherworldly Patron: Hexblade
-        Pact Magic: 
-        - Spell Slots: 2
-          Spell DC: 14
-          Cantrips: Toll The Dead, Eldritch Blast 
-          Spells: Hex, Crown of Madness, Mind Thrust, Misty Step
-        Rite Focus: The Hexblade - Whenever you target a creature with a blood curse, your next attack against the cursed creature deals additional damage equal to your proficiency modifier
-        Mystic Frenzy: when you use your action to cast a cantrip, you can immediately make one weapon attack as a bonus action.
-        Revealed Arcana: The Hexblade - You can cast Branding Smite once using a pact magic spell slot. You can’t do so again until you finish a long rest
+    - N/A
+    proficiencies:
+    - Investigation
+    - Perception
+    - Survival    
+    - Insight
+  special-abilities:
+  - title: Hexblood Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: You can see in dim light within 60 feet of you as if it were bright light and in darkness as if it were dim light.
+    - title: Fey Resilience
+    - content: You have advantage on saving throws you make to avoid or end the charmed condition on yourself.
+    - title: Hex Magic
+    - content: You can cast the Disguise Self and Hex spells with this trait. Intelligence, Wisdom, or Charisma is your spellcasting ability for these spells (choose when you gain this lineage). Once you cast either of these
+               spells with this trait, you can’t cast that spell with it again until you finish a long rest. You can also cast these spells using any spells slots you have.
+    - title: Magic Token
+    - content: As an action, you can harmlessly pull out one of your nails, a tooth, or a lock of hair. This token is imbued with magic until you finish a long rest. While the token is imbued in this way, you can use an
+               action to send a telepathic message to the creature holding or carrying the token, as long as you are on the same plane of existence and are within 10 miles of it. The message can contain up to twenty-five
+               words. In addition, while you are within 10 miles of the token, you can use an action to enter a trance for 1 minute, during which you can see and hear from the token as if you were located where it is.
+               While you are using your senses at the token’s location, you are blinded and deafened in regard to your own surroundings. Afterward, the token is harmlessly destroyed. Once you create a token using this
+               feature, you can’t do so again until you finish a long rest, at which point your missing part regrows
+  - title: Blood Hunter Abilities
+  - abilities:
+    - title: Hunters Bane
+    - content: You have advantage on Wisdom (Survival) checks to track fey, fiends, or undead, as well as on Intelligence ability checks to recall information about them. The Hunter’s Bane also empowers your body to 
+               control and shape hemocraft magic, using your own blood and life essence to fuel your abilities. Some of your features require your target to make a saving throw to resist the feature’s effects. 
+    - title: Hemocraft save DC
+    - content: 14
+    - title: Blood Maledict 
+    - content: you gain the ability to channel, and sometimes sacrifice, a part of your vital essence to curse and manipulate creatures through hemocraft magic. You gain one Blood Curse of your choice. You learn one 
+               additional blood curse of your choice, and you can choose one of the blood curses you know and replace it with another blood curse, at 6th, 10th, 14th, and 18th level. When you use your Blood Maledict, 
+               you choose which curse to invoke. While invoking a blood curse, but before it affects the target, you can choose to amplify the curse by losing a number of hit points equal to one roll of your hemocraft 
+               die, as shown in the Hemocraft Die column of the Blood Hunter table. An amplified curse gains an additional effect, noted in the curse’s description. Creatures that do not have blood in their bodies are 
+               immune to blood curses, unless you have amplified the curse. You can use this feature once. Beginning at 6th level, you can use your Blood Maledict feature twice, at 13th level you can use it three times 
+               between rests, and at 17th level, you can use it four times between rests. You regain all expended uses when you finish a short or long rest.
+    - title: Hemocraft Die
+    - content: 1d6
+    - title: Blood Curses Known
+    - content: 2
+    - title: Blood Curses
+    - content: Blood Curse of the Eyeless, Blood Curse of the Fallen Puppet  
+    - title: Figthing Style
+    - content: Two-Weapon Fighting - When you engage in two-weapon Fighting, you can add your ability modifier to the damage of the second Attack.
+    - title: Crimson Rite
+    - content: You learn to invoke a rite of hemocraft within your weapon at the cost of your own vitality. Choose one rite from the Primal Rites list to learn. As a bonus action, you activate a crimson rite on a 
+               single weapon with the elemental energy of a known rite of your choice that lasts until you finish a short or long rest, or if you aren’t holding the weapon at the end of your turn. When you activate a rite,
+               you lose a number of hit points equal to one roll of your hemocraft die, as shown in the Hemocraft Die column of the Blood Hunter table. While active, attacks from this weapon deal an additional 1d4 damage 
+               of the chosen rite’s type. This damage is magical, and increases as you gain levels as a blood hunter, as shown in the Hemocraft Die column of the Blood Hunter table. A weapon can only hold a single active 
+               rite at a time. You learn an additional Primal Rite of your choice at 7th level, and choose an Esoteric Rite to learn at 14th level.
+    - title: Primal Rites Known
+    - content:    
+    - title: Extra Attack
+    - content: You can attack twice, instead of once, whenever you take the Attack action
+    - title: Brand of Castigation
+    - content: Whenever you damage a creature with your Crimson Rite feature, you can choose to sear an arcane brand of hemocraft magic into it (requires no action). You always know the direction to the branded 
+               creature, and each time the branded creature deals damage to you or a creature you can see within 5 feet of you, the branded creature suffers psychic damage equal to your Intelligence modifier 
+               (minimum of 1 damage). Your brand lasts until you dismiss it, or you apply a brand to another creature. Your brand counts as a spell for the purposes of dispel magic, and the spell level is equal to 
+               half of your blood hunter level (maximum of 9th level spell). Once you use this feature, you can’t use it again until you finish a short or long rest.
+  - title: Order of the Profane Soul Abilities
+  - abilities: 
+    - title: Otherworldly Patron
+    - content: The Hexblade
+    - title: Pact Magic
+    - content: You can augment your combat techniques with the ability to cast spells.
+    - title: Spell Slots
+    - content: 2
+    - title: Spell DC
+    - content: 14
+    - title: Cantrips
+    - content: Toll The Dead, Eldritch Blast
+    - title: Spells
+    - content: Hex, Crown of Madness, Mind Thrust, Misty Step
+    - title: Rite Focus
+    - content: The Hexblade - Whenever you target a creature with a blood curse, your next attack against the cursed creature deals additional damage equal to your proficiency modifier.
+    - title: Mystic Frenzy
+    - content: When you use your action to cast a cantrip, you can immediately make one weapon attack as a bonus action.
+    - title: Revealed Arcana
+    - content: The Hexblade - You can cast Branding Smite once using a pact magic spell slot. You can’t do so again until you finish a long rest.
 
-    special-abilities:
-       - Proficiencies: Investigation, Survival, Insight, Perception
-         Feats: Mage Slayer, Sentinel, Observant
+  - title: Feats
+  - content: Mage Slayer, Sentinel, Observant
 
-    attacks: |
-      2 attacks with Cold Iron Scimitar's or spell attacks
-    combat-tactics: |
-      He wont hesitate to fight any monster but will go out of his way not to fight normal people
-    special-equipment:
-    - Dual Cold Iron Scimitars: will cause an extra 1d4 damage to fey, undead, and fiends it it hits them. It also counts as a magic weapon against these creatures for purposes of immunity and resistance. Due to the expense,
-                                cold iron is often applied as a wire (made by pulling or swaging) and then inlayed into the weapon, rather than making the whole weapon of the metal                                               
+  - title: Attacks
+  - content: 2 attacks with Cold Iron Scimitar's or spell attacks
+  - title: Combat Tactics
+  - content: He wont hesitate to fight any monster but will go out of his way not to fight normal people
+
+  - title: Special Equipment
+  - abilities:
+    - title: Dual Cold Iron Scimitars
+    - content: Will cause an extra 1d4 damage to fey, undead, and fiends it it hits them. It also counts as a magic weapon against these creatures for purposes of immunity and resistance. Due to the expense,
+               cold iron is often applied as a wire (made by pulling or swaging) and then inlayed into the weapon, rather than making the whole weapon of the metal                                               
       
   profile:
 
